<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="update">Обновить</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="email">machoman1488@yandex.ru</string>
    <string name="subjectOfMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageToSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="messageToShareApp">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="doubleInfo">%1$s • %2$s</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="story_tracks">Вы искали</string>
    <string name="clear_story">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="favorites_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_is_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name_of_playlist">Название*</string>
    <string name="description_of_playlist">Описание</string>
    <string name="to_create">Создать</string>
    <string name="access_point_to_the_gallery">Разрешение на использование галереи необходимо для доступа к изображениям</string>
    <string name="message_of_playlist_dialog">Завершить создание плейлиста?</string>
    <string name="message_text_of_playlist_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="trackAdd">Добавлено в плейлист</string>
    <string name="trackAdded">Трек уже добавлен в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="change_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="to_delete_track_from_playlist">Хотите удалить трек?</string>
    <string name="to_redact">Редактировать</string>
    <string name="to_save">Сохранить</string>
    <string name="empty_playlist_placeholder">В этом плейлисте\nнет ни одного трека</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>
