<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <TextView
        style="@style/TopTextStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_16dp"
        android:text="@string/settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchThemeButton"
        style="@style/SwitchButtonStyle"
        android:layout_gravity="center_vertical"
        android:text="@string/dark_theme" />

    <Button
        android:id="@+id/shareButton"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/to_share"
        android:text="@string/share_app" />

    <Button
        android:id="@+id/supportButton"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/to_support"
        android:text="@string/text_to_support" />

    <Button
        android:id="@+id/agreementButton"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/arrowforward"
        android:text="@string/user_agreement" />

</LinearLayout>
