<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="?attr/colorSecondaryVariant"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/_16dp"
        android:paddingLeft="@dimen/_16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sp" />

    <Button
        android:id="@+id/search"
        style="@style/MainButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/loupe" />

    <Button
        android:id="@+id/media"
        style="@style/MainButtonStyle"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/options"
        style="@style/MainButtonStyle"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>
