<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.practicum.playlistmaker.player.ui.AudioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Toolbar"
            app:titleTextAppearance="@style/TopTextStyle">
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/trackIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@id/searchButton" />

        <TextView
            android:id="@+id/trackName"
            style="@style/MainTrackInfo"
            android:layout_marginTop="24dp"
            android:textSize="@dimen/_22sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toStartOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/trackIcon" />

        <TextView
            android:id="@+id/artistName"
            style="@style/MainTrackInfo"
            android:layout_marginTop="@dimen/_12dp"
            android:textSize="14sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toStartOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/trackName" />

        <ImageButton
            android:id="@+id/playTrackButton"
            style="@style/PlayTrackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toStartOf="@id/rightGL"
            app:layout_constraintStart_toStartOf="@id/leftGL"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            style="@style/FunctionTrackButton"
            android:src="@drawable/add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/playTrackButton"
            app:layout_constraintStart_toStartOf="@id/leftGL"
            app:layout_constraintTop_toTopOf="@id/playTrackButton" />

        <ImageButton
            android:id="@+id/toLikeTrackButton"
            style="@style/FunctionTrackButton"
            android:src="@drawable/to_like_track_icon"
            app:layout_constraintBottom_toBottomOf="@id/playTrackButton"
            app:layout_constraintEnd_toStartOf="@id/rightGL"
            app:layout_constraintTop_toTopOf="@id/playTrackButton" />

        <TextView
            android:id="@+id/trackTimeToEnd"
            style="@style/MainTrackInfo"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/rightGL"
            app:layout_constraintStart_toStartOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/playTrackButton" />

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/track_time"
            android:textColor="@color/light_grey"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGL1"
            app:layout_constraintTop_toBottomOf="@+id/trackTimeToEnd" />

        <TextView
            android:id="@+id/trackTimeInfo"
            style="@style/FunctionTrackText"
            app:layout_constraintBaseline_toBaselineOf="@id/trackTime"
            app:layout_constraintEnd_toEndOf="@+id/rightGL1" />

        <TextView
            android:id="@+id/trackAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/track_album"
            android:textColor="@color/light_grey"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGL1"
            app:layout_constraintTop_toBottomOf="@+id/trackTime" />

        <TextView
            android:id="@+id/trackAlbumInfo"
            style="@style/FunctionTrackText"
            android:layout_width="@dimen/_0dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/trackAlbum"
            app:layout_constraintEnd_toEndOf="@+id/rightGL1"
            app:layout_constraintStart_toEndOf="@id/trackAlbum" />

        <TextView
            android:id="@+id/trackYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/track_year"
            android:textColor="@color/light_grey"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGL1"
            app:layout_constraintTop_toBottomOf="@+id/trackAlbum" />

        <TextView
            android:id="@+id/trackYearInfo"
            style="@style/FunctionTrackText"
            app:layout_constraintBaseline_toBaselineOf="@id/trackYear"
            app:layout_constraintEnd_toEndOf="@+id/rightGL1" />

        <TextView
            android:id="@+id/trackGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/track_genre"
            android:textColor="@color/light_grey"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGL1"
            app:layout_constraintTop_toBottomOf="@+id/trackYear" />

        <TextView
            android:id="@+id/trackGenreInfo"
            style="@style/FunctionTrackText"
            app:layout_constraintBaseline_toBaselineOf="@id/trackGenre"
            app:layout_constraintEnd_toEndOf="@+id/rightGL1" />

        <TextView
            android:id="@+id/trackCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/track_country"
            android:textColor="@color/light_grey"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/leftGL1"
            app:layout_constraintTop_toBottomOf="@+id/trackGenre" />

        <TextView
            android:id="@+id/trackCountryInfo"
            style="@style/FunctionTrackText"
            app:layout_constraintBaseline_toBaselineOf="@id/trackCountry"
            app:layout_constraintEnd_toEndOf="@+id/rightGL1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
