<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.practicum.playlistmaker.media.ui.PlaylistInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16dp" />

        <ImageView
            android:id="@+id/playlistBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/grey"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/playlistPlaceholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:background="@color/grey"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/playlistBackground"
            app:layout_constraintStart_toStartOf="@id/playlistBackground"
            app:layout_constraintTop_toTopOf="@id/playlistBackground" />

        <ImageView
            android:id="@+id/playlistImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/grey"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/playlistBackground"
            app:layout_constraintStart_toStartOf="@id/playlistBackground"
            app:layout_constraintTop_toTopOf="@id/playlistBackground" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrowback_black"
            app:titleTextAppearance="@style/TopTextStyle"
            tools:ignore="MissingConstraints">

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/playlistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/grey"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_bold"
            android:maxLines="1"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/playlistBackground" />

        <TextView
            android:id="@+id/playlistDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@color/grey"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/playlistName" />

        <TextView
            android:id="@+id/playlistInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@color/grey"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/playlistDescription" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@color/grey"
            android:src="@drawable/to_share"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/playlistInfo"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/actionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@color/grey"
            android:src="@drawable/options"
            app:layout_constraintStart_toEndOf="@+id/shareButton"
            app:layout_constraintTop_toBottomOf="@+id/playlistInfo"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        style="@style/BottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            style="@style/bottomSheetView"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/rounder" />

        <TextView
            android:id="@+id/placeholderText"
            style="@style/PlaceholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_48dp"
            android:text="@string/empty_playlist_placeholder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/track_item">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottom_sheet_background"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/actions_bottom_sheet"
        style="@style/BottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="383dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            style="@style/bottomSheetView"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/rounder" />

        <FrameLayout
            android:id="@+id/playlistAudioViewItem"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="@dimen/_12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlistIcon"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playlistNameItem"
                    style="@style/TrackNameTextStyle" />

                <TextView
                    android:id="@+id/playlistInfoItem"
                    style="@style/TrackInfoTextStyle" />
            </LinearLayout>
        </FrameLayout>

        <Button
            android:id="@+id/sharePlaylist"
            style="@style/SettingsButtonStyle"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/share_playlist" />

        <Button
            android:id="@+id/changePlaylistInfo"
            style="@style/SettingsButtonStyle"
            android:text="@string/change_playlist_info" />

        <Button
            android:id="@+id/deletePlaylist"
            style="@style/SettingsButtonStyle"
            android:text="@string/delete_playlist" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
